# pre_analyzer

./: .coverage  .cursorignore  .gitignore  LICENSE  Makefile  README.md  README_PARSERS.md  TEST_Analisi profitabilita'_Tabella riassuntiva SAP_PEPSICO INC - Copia.xlsm  TEST_SUITE_SUMMARY.md  app.py  app.spec  config.py  debug_excel.py  debug_va21_analysis.json  lint_and_format.py  pre_analyzer_cli.py  pyproject.toml  pytest-results.xml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.py  scope_of_supply_analyzer.py  test.py  test_both_direct_parsers.py  test_both_parsers.py  test_constants_refactoring.py  test_runner.bat  test_runner.sh  test_sidebar_fix.py  test_table_difference.py  test_unified_comparator.py
.cursor/rules/: python-code.mdc
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
.streamlit/: config.toml
components/: chart_generators.py  field_constants.py  pdf_report_generator.py  ui_components.py
components/analyzers/: __init__.py  base_analyzer.py  pre_analyzer.py  pre_comparator.py  pre_profittabilita_comparator.py  profittabilita_analyzer.py  profittabilita_comparator.py  unified_analyzer.py  unified_comparator.py
docs/: industrial_quotation_sample.json  unified_comparator_analysis.md  unified_parser_analysis.md
examples/: model_usage_example.py  unified_comparator_example.py
models/: __init__.py  field_mappings.py  quotation_manager.py  quotation_models.py
parsers/: analisi_profittabilita_parser.py  analisi_profittabilita_parser_direct.py  pre_file_parser.py  pre_file_parser_direct.py  unified_parser.py
src/: README_PRE_PROFITTABILITA_COMPARATOR.md  README_PROFITTABILITA_COMPARATOR.md  README_PROJECT_STRUCTURE_ANALYZER.md  README_UNIFIED_APP.md  STREAMLIT_README.md  app.py  config.py  pre_profittabilita_comparator_app.py  run_app.py  run_comparator.bat  run_comparator.py  run_pre_profittabilita_comparator.bat  run_pre_profittabilita_comparator.py  run_profittabilita_comparator.bat  run_project_analyzer.bat  run_project_analyzer.py  run_simple.bat  run_simple.py  run_unified_app.bat  run_unified_app.py  scope_of_supply_analyzer.py  streamlit_app.py  test_pre_profittabilita_comparator.py
src/components/: __init__.py  field_constants.py  file_processor.py  ui_components.py
src/components/analyzers/: __init__.py  pre_comparator.py  profittabilita_analyzer.py  profittabilita_comparator.py
src/parsers/: analisi_profittabilita_parser.py
src/pre_file/: README_COMPARATOR.md  analisi_profittabilita_parser.py  example_usage.py  pre_comparator_app.py  pre_file_parser.py  profittabilita_comparator_app.py  run_profittabilita_comparator.py  streamlit_app.py  streamlit_app_refactored.py  validate_json_schema.py
src/pre_file/components/: file_processor.py
src/pre_file/components/analyzers/: __init__.py  base_analyzer.py  pre_analyzer.py  profittabilita_analyzer.py  profittabilita_comparator.py
src/utils/: __init__.py  excel_processor.py  format.py
src/widgets/: data_tables.py  detail_comparison_viz.py  table_difference.py
test/: create_test_excel.py
test_data/: test_pre.xlsx
tests/: README.md  __init__.py  conftest.py  test_unified_parser.py
utils/: __init__.py  excel_processor.py  format.py
widgets/: __init__.py  data_tables.py  detail_comparison_viz.py  single_file_viz.py  summary_comparison_viz.py
